# photon-os-installer

./: pyproject.toml  setup.py
.github/workflows/: build-container.yml
ci/: Dockerfile  README.md  create-ova.sh  minimal.cfg  packages_minimal.json
photon_installer/: generate_initrd.sh  installer.py  isoBuilder.py  logger.py
